option java_outer_classname="GetKeysByTagCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;

message GetKeysByTagCommand
{
	optional int32 tagComparisonType = 1;
	repeated string tags = 2;
	optional int64 requestId = 3;
}